test/solc-verify/issues/Issue093.sol.gold
test/solc-verify/issues/Issue093.sol:7:5: solc-verify error: Inline assembly is not supported
test/solc-verify/issues/Issue093.sol:6:3: solc-verify warning: Errors while translating function body, will be skipped
A::[constructor]: SKIPPED
No errors found.
