test/solc-verify/issues/Issue093.sol
// SPDX-License-Identifier: GPL-3.0
pragma solidity >=0.7.0;

contract A {
  int constant c = 0;
  constructor() {
    assembly {}
  }
}
